@@ -1,9 +1,9 @@
-# $NetBSD: gcc3.mk,v 1.9 2003/07/13 13:16:05 grant Exp $
+# $NetBSD: gcc3.mk,v 1.10 2003/07/17 09:07:55 abs Exp $
 #
 # make configuration file for @DISTNAME@
 
 CC=		@GCC_PREFIX@/bin/gcc
-CPP=		@GCC_PREFIX@/bin/cpp
+CPP=		@GCC_PREFIX@/bin/cpp -gcc
 CXX=		@GCC_PREFIX@/bin/g++
 F77=		@GCC_PREFIX@/bin/g77
 PKG_FC=		@GCC_PREFIX@/bin/g77
